--- a/globalcases.html
+++ b/globalcases.html
@@ -110,8 +110,8 @@
     <thead>
      <tr>
       <th scope="col">Countries Name</th> 
-      <th scope="col">Total Cases</th>
-      <th scope="col">Total Deaths</th>
+      <th scope="col">Total Cases (New Cases)</th>
+      <th scope="col">Total Deaths (New Deaths)</th>
       <th scope="col">Last Updated</th> 
      </tr> 
     </thead>
@@ -1268,114 +1268,6 @@
       <td class="CaseConfirm191"></td>
       <td class="CaseDeath191"></td>
       <td class="Date191"></td>         
-     </tr>
-     <tr>
-      <td scope="row">Timor-Leste</td>
-      <td class="CaseConfirm"></td>
-      <td class="tlCaseDeath"></td>
-      <td class="tlDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Togo</td>
-      <td class="tgCaseConfirm"></td>
-      <td class="tgCaseDeath"></td>
-      <td class="tgDate"></td>       
-     </tr>
-     <tr>
-      <td scope="row">Trinidad and Tobago</td>
-      <td class="ttCaseConfirm"></td>
-      <td class="ttCaseDeath"></td>
-      <td class="ttDate"></td>         
-     </tr>
-     <tr>
-      <td scope="row">Tunisia</td>
-      <td class="tnCaseConfirm"></td>
-      <td class="tnCaseDeath"></td>
-      <td class="tnDate"></td>       
-     </tr>
-     <tr>
-      <td scope="row">Turkey</td>
-      <td class="trCaseConfirm"></td>
-      <td class="trCaseDeath"></td>
-      <td class="trDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Uganda</td>
-      <td class="ugCaseConfirm"></td>
-      <td class="ugCaseDeath"></td>
-      <td class="ugDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Ukraine</td>
-      <td class="uaCaseConfirm"></td>
-      <td class="uaCaseDeath"></td>
-      <td class="uaDate"></td>         
-     </tr>
-     <tr>
-      <td scope="row">United Arab Emirates</td>
-      <td class="aeCaseConfirm"></td>
-      <td class="aeCaseDeath"></td>
-      <td class="aeDate"></td>       
-     </tr>
-     <tr>
-      <td scope="row">United Kingdom of Great Britain and Northern Ireland</td>
-      <td class="gbCaseConfirm"></td>
-      <td class="gbCaseDeath"></td>
-      <td class="gbDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">United Republic of Tanzania</td>
-      <td class="tzCaseConfirm"></td>
-      <td class="tzCaseDeath"></td>
-      <td class="tzDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Uruguay</td>
-      <td class="uyCaseConfirm"></td>
-      <td class="uyCaseDeath"></td>
-      <td class="uyDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Uzbekistan</td>
-      <td class="uzCaseConfirm"></td>
-      <td class="uzCaseDeath"></td>
-      <td class="uzDate"></td>         
-     </tr>
-     <tr>
-      <td scope="row">Vanuatu</td>
-      <td class="vuCaseConfirm"></td>
-      <td class="vuCaseDeath"></td>
-      <td class="vuDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Vietnam</td>
-      <td class="vnCaseConfirm"></td>
-      <td class="vnCaseDeath"></td>
-      <td class="vnDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Western Sahara</td>
-      <td class="ehCaseConfirm"></td>
-      <td class="ehCaseDeath"></td>
-      <td class="ehDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Yemen</td>
-      <td class="yeCaseConfirm"></td>
-      <td class="yeCaseDeath"></td>
-      <td class="yeDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Zambia</td>
-      <td class="zmCaseConfirm"></td>
-      <td class="zmCaseDeath"></td>
-      <td class="zmDate"></td>        
-     </tr>
-     <tr>
-      <td scope="row">Zimbabwe</td>
-      <td class="zyCaseConfirm"></td>
-      <td class="zyCaseDeath"></td>
-      <td class="zyDate"></td>        
      </tr>
     </tbody>
    </table>
