--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,8 @@
     <thead>
      <tr>
       <th scope="col">States Name</th> 
-      <th scope="col">Total Cases</th>
-      <th scope="col">Total Deaths</th>
+      <th scope="col">Total Cases (New Cases)</th>
+      <th scope="col">Total Deaths (New Deaths)</th>
       <th scope="col">Last Updated</th> 
      </tr> 
     </thead>
