--- a/index.html
+++ b/index.html
@@ -992,7 +992,9 @@
     </div>
    </div>  
   
-<div id="article-main-june2021"></div>  
+<div id="article-main-june2021"></div>
+<div id="article-main-july2021"></div>
+<div id="article-main-aug2021"></div>  
    
   
   
@@ -3086,5 +3088,6 @@
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/news_container.js"></script>
+<script src="js/newsContainer/augNewsContainer.js"></script>
 </body>
 </html>
