--- a/index.html
+++ b/index.html
@@ -3088,6 +3088,6 @@
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
 <script src="js/news_container.js"></script>
-<script src="js/newsContainer/augNewsContainer.js"></script>
+<script src="../newsContainer/augNewsContainer.js"></script>
 </body>
 </html>
