--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
        </div> -->      
    </ul>
 <div id="article-main">    
-<div class="article-container">
+<!-- <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
      <h3>Public Health Officials Express Concern As The Coronavirus Keeps Mutating</h3>
@@ -990,7 +990,7 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>  
+   </div> --> 
   
 <div id="article-main-june2021"></div>
 <div id="article-main-july2021"></div>
