--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <link rel="dns-prefetch" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style" />
   <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="preload" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" as="style" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://code.highcharts.com/stock/highstock.js"></script>
   <script src="https://code.highcharts.com/stock/modules/data.js"></script>
@@ -228,7 +228,7 @@
   <div>
     <h1>COVID-19 Infographics</h1>
   </div> 
-    <div class="swiper-container swiper-infograph">
+    <div class="swiper swiper-infograph">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <img data-src="img/Available Vaccines.jpg" alt="Available COVID19 Vaccine" class="swiper-lazy">
@@ -268,7 +268,7 @@
     
 <section id="news info">
   <!-- Swiper -->
-<div class="swiper-container news-wrapper">
+<div class="swiper news-wrapper">
  <div class="swiper-wrapper">
   <div class="swiper-slide">     
  <div class="wrapper">
@@ -3017,7 +3017,7 @@
  <!-- <section class="portfolio">
 
     <!-- Swiper -->
-  <!-- <div class="swiper-container swiper-infograph">
+  <!-- <div class="swiper swiper-infograph">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <img data-src="img/Available Vaccines.jpg" alt="Available COVID19 Vaccine" class="swiper-lazy">
@@ -3079,7 +3079,7 @@
 
 <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script> 
 <script defer src="js/swiperaction.js"></script>
 <script src="js/d3.v6.min.js" charset="utf-8"></script> 
 <script async src="js/dataviz.js"></script>
