--- a/covidnews.html
+++ b/covidnews.html
@@ -15,9 +15,9 @@
   <link rel="dns-prefetch" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style" />
   <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/style3.css" />
-  <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/style3.css" />
+  <link rel="preload" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" as="style" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="prefetch" href="globalcases.html">
   <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Tracker/">
   <title>COVID-19 News</title>
@@ -103,7 +103,7 @@
 <!-- News Section -->  
 <section id="news">
   <!-- Swiper -->
-<div class="swiper-container news-wrapper">
+<div class="swiper news-wrapper">
  <div class="swiper-wrapper">
   <div class="swiper-slide">     
  <div class="wrapper">
@@ -17270,7 +17270,7 @@
   <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
 </footer>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script> 
 <script defer src="js/swiperaction.js"></script>
 <script defer src="js/newsmain.js"></script>
 <script src="js/anime.min.js"></script>  
