--- a/index.html
+++ b/index.html
@@ -994,7 +994,8 @@
   
 <div id="article-main-june2021"></div>
 <div id="article-main-july2021"></div>
-<div id="article-main-aug2021"></div>  
+<div id="article-main-aug2021"></div>
+<div id="article-main-sept2021"></div>  
    
   
   
@@ -3089,5 +3090,6 @@
 <script src="js/anime.min.js"></script>
 <script src="js/news_container.js"></script> 
 <script src="js/newsContainer/aug2021NewsContainer.js"></script>
+<script src="js/newsContainer/sept2021NewsContainer.js"></script>
 </body>
 </html>
