--- a/index.html
+++ b/index.html
@@ -3088,7 +3088,7 @@
 <script async src="js/cdcdatacollection.js"></script>
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
-<script src="js/news_container.js"></script> 
+<script src="js/newsContainer/newsContainer.js"></script> 
 <script src="js/newsContainer/aug2021NewsContainer.js"></script>
 <script src="js/newsContainer/sept2021NewsContainer.js"></script>
 </body>
