--- a/index.html
+++ b/index.html
@@ -105,7 +105,27 @@
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
  </section> -->
-</section>      
+</section>
+    
+<section class="tabs">
+  <div class="info-title">
+    <p>COVID-19 Booster Vaccine Progress</p>
+  </div> 
+  <div class="vac-boxes">
+    <div id="tab-1" class="vacbox">
+      <p>Pfizer and BioNTech</p>
+      <h3><strong><span style="color:green" class="pzfizer-boost-num">Loading...</strong></span></h3>
+    </div>
+    <div id="tab-2" class="vacbox">
+      <p>Moderna</p>
+      <h3><strong><span style="color:green" class="moderna-boost-num">Loading...</strong></span></h3>
+    </div>
+    <div id="tab-3" class="vacbox">
+      <p>Johnson & Johson/Jessen</p>
+      <h3><strong><span style="color:green" class="jensen-boost-num">Loading...</strong></span></h3>
+    </div>
+    </div>
+</section>     
     
 <!-- Box Section -->
  <section class="boxes">
