--- a/index.html
+++ b/index.html
@@ -3108,8 +3108,9 @@
 <script async src="js/cdcdatacollection.js"></script>
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
-<script src="js/newsContainer/newsContainer.js"></script> 
+<!-- <script src="js/newsContainer/newsContainer.js"></script> --> 
 <script src="js/newsContainer/aug2021NewsContainer.js"></script>
 <script src="js/newsContainer/sept2021NewsContainer.js"></script>
+<script src="js/newsContainer/october2021NewsContainer.js"></script>
 </body>
 </html>
