--- a/index.html
+++ b/index.html
@@ -1015,9 +1015,12 @@
 <div id="article-main-june2021"></div>
 <div id="article-main-july2021"></div>
 <div id="article-main-aug2021"></div>
-<div id="article-main-sept2021"></div>  
+<div id="article-main-sept2021"></div>
+<div id="article-main-october2021"></div>
+<div id="article-main-nov2021"></div>
+<div id="article-main-dec2021"></div>
+<div id="article-main-jan2022"></div>  
    
-  
   
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
@@ -1431,10 +1434,10 @@
     <fieldset>
     <legend>State Options</legend>
     <select id="">
-       <option id ="">California</option>
-       <option id ="">Texas</option>
-       <option id ="">Arizona</option>
-       <option id ="">New York</option>
+       <option id="">California</option>
+       <option id="">Texas</option>
+       <option id="">Arizona</option>
+       <option id="">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1446,10 +1449,10 @@
     <legend>State Options</legend>
     <!-- <button id="" class="autocompare">United States</button> -->
     <select id="">
-       <option id ="">California</option>
-       <option id ="">Texas</option>
-       <option id ="">Arizona</option>
-       <option id ="">New York</option>
+       <option id="">California</option>
+       <option id="">Texas</option>
+       <option id="">Arizona</option>
+       <option id="">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2383,10 +2386,10 @@
     <legend>State Options</legend>
     <button id="button1" class="autocompare">United States</button> 
     <select id="newCaseSelectButton">
-       <option id ="newcases4">California</option>
-       <option id ="newcases3">Texas</option>
-       <option id ="newcases2">Arizona</option>
-       <option id ="newcases1">New York</option>
+       <option id="newcases4">California</option>
+       <option id="newcases3">Texas</option>
+       <option id="newcases2">Arizona</option>
+       <option id="newcases1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2398,10 +2401,10 @@
     <legend>State Options</legend>
     <button id="button2" class="autocompare">United States</button> 
     <select id="newDeathSelectButton">
-       <option id ="newdeath4">California</option>
-       <option id ="newdeath3">Texas</option>
-       <option id ="newdeath2">Arizona</option>
-       <option id ="newdeath1">New York</option>
+       <option id="newdeath4">California</option>
+       <option id="newdeath3">Texas</option>
+       <option id="newdeath2">Arizona</option>
+       <option id="newdeath1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2413,10 +2416,10 @@
     <legend>State Options</legend>
     <button id="button3" class="autocompare">United States</button> 
     <select id="curHosSelectButton">
-       <option id ="curhos4">California</option>
-       <option id ="curhos3">Texas</option>
-       <option id ="curhos2">Arizona</option>
-       <option id ="curhos1">New York</option>
+       <option id="curhos4">California</option>
+       <option id="curhos3">Texas</option>
+       <option id="curhos2">Arizona</option>
+       <option id="curhos1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2428,10 +2431,10 @@
     <legend>State Options</legend>
     <button id="button4" class="autocompare">United States</button> 
     <select id="curVentSelectButton">
-       <option id ="curvent4">California</option>
-       <option id ="curvent3">Texas</option>
-       <option id ="curvent2">Arizona</option>
-       <option id ="curvent1">New York</option>
+       <option id="curvent4">California</option>
+       <option id="curvent3">Texas</option>
+       <option id="curvent2">Arizona</option>
+       <option id="curvent1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2458,10 +2461,10 @@
     <legend>State Options</legend>
     <button id="button6" class="autocompare">United States</button> 
     <select id="totCaseSelectButton">
-       <option id ="totcases4">California</option>
-       <option id ="totcases3">Texas</option>
-       <option id ="totcases2">Arizona</option>
-       <option id ="totcases1">New York</option>
+       <option id="totcases4">California</option>
+       <option id="totcases3">Texas</option>
+       <option id="totcases2">Arizona</option>
+       <option id="totcases1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2473,10 +2476,10 @@
     <legend>State Options</legend>
     <button id="button7" class="autocompare">United States</button> 
     <select id="totDeathSelectButton">
-       <option id ="totdeath4">California</option>
-       <option id ="totdeath3">Texas</option>
-       <option id ="totdeath2">Arizona</option>
-       <option id ="totdeath1">New York</option>
+       <option id="totdeath4">California</option>
+       <option id="totdeath3">Texas</option>
+       <option id="totdeath2">Arizona</option>
+       <option id="totdeath1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -2488,10 +2491,10 @@
     <legend>State Options</legend>
     <button id="button8" class="autocompare">United States</button> 
     <select id="newCompSelectButton">
-       <option id ="totcomp4">California</option>
-       <option id ="totcomp3">Texas</option>
-       <option id ="totcomp2">Arizona</option>
-       <option id ="totcomp1">New York</option>
+       <option id="totcomp4">California</option>
+       <option id="totcomp3">Texas</option>
+       <option id="totcomp2">Arizona</option>
+       <option id="totcomp1">New York</option>
     </select>  
     </fieldset>
     </form>
