--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
 <div id="article-main-aug2021"></div>
 <div id="article-main-sept2021"></div>
 <div id="article-main-october2021"></div>
-<div id="article-main-nov2021"></div>
+<div id="article-main-november2021"></div>
 <div id="article-main-dec2021"></div>
 <div id="article-main-jan2022"></div>  
    
@@ -3115,5 +3115,6 @@
 <script src="js/newsContainer/aug2021NewsContainer.js"></script>
 <script src="js/newsContainer/sept2021NewsContainer.js"></script>
 <script src="js/newsContainer/october2021NewsContainer.js"></script>
+<script src="js/newsContainer/november2021NewsContainer.js"></script>
 </body>
 </html>
