--- a/index.html
+++ b/index.html
@@ -3116,5 +3116,7 @@
 <script src="js/newsContainer/sept2021NewsContainer.js"></script>
 <script src="js/newsContainer/october2021NewsContainer.js"></script>
 <script src="js/newsContainer/november2021NewsContainer.js"></script>
+<script src="js/newsContainer/december2021NewsContainer.js"></script>
+<script src="js/newsContainer/january2022NewsContainer.js"></script>
 </body>
 </html>
